# LGMP

./: .gitignore  .gitmodules  LGMP.vcxproj  LGMP.vcxproj.filters  README.md  lgmp.sln  refresh-copyright
.github/workflows/: build.yml
dump/: CMakeLists.txt  main.c
lgmp/: CMakeLists.txt
lgmp/include/lgmp/: client.h  host.h  lgmp.h  status.h
lgmp/src/: client.c  headers.h  host.c  lgmp.h  status.c
relacy-test/: CMakeLists.txt  main.cpp
test-client/: CMakeLists.txt  main.c
test-client/src/: main.c
test-host/: CMakeLists.txt  main.c
test-host/src/: main.c
